--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,7 @@ language: python
 python:
   - "3.5"
 before_install: true
+install:
+  - pip install -U pip
+  - pip install -U setuptools
 script: python setup.py test
