--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,11 @@
+[flake8]
+exclude = build,.eggs
+
 [aliases]
 test=pytest
 
 [metadata]
 description-file = README.md
+
+[tool:pytest]
+addopts = test
