--- a/readthedocs-env.yml
+++ b/readthedocs-env.yml
@@ -7,7 +7,8 @@ dependencies:
 - pip:
   - sphinx-rtd-theme
   - sphinxcontrib-asyncio
-  - aiohttp=1.*
-  - LinkHeader=0.*
-  - uritemplate=3.*
-  - python-dateutil=2.*
+  - aiohttp~=1.0
+  - LinkHeader~=0.4
+  - uritemplate~=3.0
+  - python-dateutil~=2.5
+  - -e.
