--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 language: python
 python:
   - "3.5"
+  - "3.6"
+  - "3.7-dev"
+matrix:
+  allow_failures:
+    - python: "3.7-dev"
 before_install: true
 install:
   - pip install -U pip
