Update Read the Docs configuration
This updates the Read the Docs configuration to use a native Python 3.7 installation.

--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -1,5 +1,14 @@
-conda:
-    file: readthedocs-env.yml
+version: 2
+
+sphinx:
+  configuration: docs/conf.py
+
+formats: all
+
 python:
-    version: 3
-    setup_py_install: true
+  version: 3.7
+  install:
+    - method: pip
+      path: .
+      extra_requirements:
+         - docs
